--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,15 +1,23 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ice="http://www.icesoft.com/icefaces/component">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <script language="javascript">
-            window.location = "./welcomeICEfaces.jsf"
-        </script>
+        <ice:form> 
+            <h2>Registration Form</h2>
+            <ice:panelGrid columns="2">
+                <ice:outputText value="Login:"/>
+                <ice:inputText value="#{User.login}"/> 
+                <ice:outputText value="Password:"/>
+                <ice:inputSecret value="#{User.passHash}"/> 
+            </ice:panelGrid>    
+            <ice:commandButton action="#{User.doLogin}" value="Login"/> 
+            <ice:commandButton action="#{User.doRegister}" value="Register"/> 
+        </ice:form>
     </h:body>
 </html>
 
