--- a/web/jsf/addToDB.xhtml
+++ b/web/jsf/addToDB.xhtml
@@ -7,8 +7,8 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <ice:commandButton action="addToDiary"> 
-        </ice:commandButton>
+        <ice:inputText value="#{product.name}"/> 
+        add to DB
     </h:body>
 </html>
 
