--- a/web/jsf/diary.xhtml
+++ b/web/jsf/diary.xhtml
@@ -7,8 +7,10 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <ice:commandButton action="addToDiary"> 
-        </ice:commandButton>
+        <ice:form>
+            <ice:commandButton action="#{diary.toAdd}" value="Add product"/> 
+            
+        </ice:form>
     </h:body>
 </html>
 
